--- a/src/utils/sample.html
+++ b/src/utils/sample.html
@@ -2,6 +2,7 @@
 <head>
     <!--code inside of title goes to the name of the tab-->
     <title>HTML 5 Resource</title>
+    <link rel="stylesheet" type="text/css" href="Sample Css.css" />
 </head>
 <!--code inisde of body appears on the webpage-->
 <body>
@@ -40,7 +41,7 @@
         <p>This is a paragraph</p>
         <!--Unordered lists have their listed items as bullet points-->
         <ul>
-            <li>Milk</li>
+            <li><em>Milk</em></li>
             <ol>
                 <li>Skim</li>
                 <li>1%</li>
