--- a/src/utils/sample.html
+++ b/src/utils/sample.html
@@ -33,6 +33,7 @@
         alt="Strinova alt + Baimo"
         width="500px">
         <h1>This is a header that is used as the title for the webpage</h1>
+        <p>this is a paragraph</p>
         <h2>This is a header that is used as a section title for subtopic</h2>
         <h3>This is a header that is used as a subsection title for subtopics</h3>
         <h4>This is a header that is used as a title for tables</h4>
@@ -128,6 +129,8 @@
             </tr>
         </Table>
     </main>
+    <div class="outer"><div class="box"> The inner box is 90% - 30px</div></div>
+    <div class="square"></div>
     <!--footer is inside body but not main-->
     <footer>
         <h6>All rights reserved.</h6>
