--- a/src/utils/sample.html
+++ b/src/utils/sample.html
@@ -19,7 +19,7 @@
     <main>
         <p>my cat is very grumpy</p>
         <!--You can add attributes like class to an element-->
-        <p class="kitty cat go jajajaa"></p>my cat is very grumpy</p>
+        <p class="editor-note"></p>my cat is very grumpy</p>
         <!--Strong is a nesting element which can sit inside of an other element-->
         <p>My cat is <strong>very</strong> grumpy</p>
         <!--You can add a image by copying the image address-->
@@ -74,7 +74,7 @@
         <p>&lt; &gt; &quot; &apos; &amp;</p>
         <!--This is a comment-->
         <span>Span is an inline element that has no semantics</span>
-        <div>Div is a block element that has no semantics</div>
+        <div class="editor-note">Div is a block element that has no semantics</div>
         <!--The 5 element below are nesting/inline elements-->
         <em>This element italicizes text</em>
         <i>This element italicizes text</i>
