--- a/src/utils/sample.html
+++ b/src/utils/sample.html
@@ -9,17 +9,23 @@
     <header>
         <h1>Resource documents for HTMl Website</h1>
     </header>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li>
+                <a href="sample.html">Page 1</a>
+            </li>
+            <li>
                 <a href="Page 2.html"> Page 2</a>
+            </li>
+            <li>
+                <a href="#">Page 3</a>
             </li>
         </ul>
     </nav>
     <main>
         <p>my cat is very grumpy</p>
         <!--You can add attributes like class to an element-->
-        <p class="editor-note"></p>my cat is very grumpy</p>
+        <p class="editor-note">my cat is very grumpy</p>
         <!--Strong is a nesting element which can sit inside of an other element-->
         <p>My cat is <strong>very</strong> grumpy</p>
         <!--You can add a image by copying the image address-->
