--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <div class="gallery-container">
       <div class="gallery">
         <div class="content-area">
-          <h1 id="gallery-title">PUS</h1>
+          <h1 id="gallery-title">P.U.S</h1>
           <p id="gallery-description">
             The official government of the new world, maintaining order while striving to find a cure for Collapse
             Syndrome
